--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
-deploy.ant.properties.file=/Users/amberdawn50/Library/Application Support/NetBeans/8.2/tomcat80.properties
-j2ee.server.home=/usr/local/Cellar/tomcat@8/8.5.45/libexec
-j2ee.server.instance=tomcat80:home=/usr/local/Cellar/tomcat@8/8.5.45/libexec
+deploy.ant.properties.file=C:\\Users\\JSU\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 8.5
+j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5
 selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=/Users/amberdawn50/Library/Application Support/NetBeans/8.2/build.properties
